--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -8,7 +8,13 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
+   <nav>
+    <a href="/celebrities/new">Create new celebrity</a>
+    <a href="/celebrities">Show all celebrities</a>
+    <a href="/movies/new">Create a movie</a>
+    <a href="/movies">All the movies</a>
 
+  </nav>
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
